--- a/index.html
+++ b/index.html
@@ -3,9 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <title>2024React</title>
+    <style>
+        body {
+            margin-top: 20px;
+        }
+        h1 {
+            font-weight: bold;
+            text-align: center;
+        }
+        h2 {
+            margin-top: -20px;
+        }
+        hr {
+            border: 2px solid #000; /* 테두리를 두껍게 설정 */
+            margin: 20px 0; /* 위아래 여백을 조절 */
+        }
+        div p {
+            margin-top: 10px;
+            margin-bottom: 0px; /* 원하는 여백 값으로 설정 */
+        }
+    </style>
 </head>
 <body>
-    <h3>Hello World!!!</h3>
+    <b><h1>Welcome to 2024React!!</h1></b>
+    <hr>
+
+    <div class="container p-5 my-5 bg-dark text-white">
+        <b><h3>웹프로그래밍응용 과제물</h3></b>
+        <p>
+            2024학년도 1학기 웹프로그래밍응용 과목의 과제물들입니다.<br>
+            주차별로 구분하여 자료를 업로드하였습니다.<br>
+            아래 링크 클릭시 과제물 업로드 페이지로 이동합니다.<br><br>
+            <a href="tasks.html"><b>Click here to Move</b></a>
+        </p>
+    </div>
+
+    <div class="container p-5 my-5 border">
+        <b><h3>웹프로그래밍 응용 발표 자료</h3></b>
+        <p>
+            2024학년도 1학기 웹프로그래밍응용 과목에서 발표한 발표 자료들입니다.<br>
+            주차별로 구분하여 자료를 업로드하였습니다.<br>
+            아래 링크 클릭시 발표 자료물 업로드 페이지로 이동합니다.<br><br>
+            <a href="presentation.html"><b>Click here to Move</b></a>
+        </p>
+    </div>
 </body>
 </html>
