decorate my webpage

--- a/presentation.html
+++ b/presentation.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Presentation</title>
     <style>
@@ -13,6 +14,7 @@
         h1 {
             font-weight: bold;
             text-align: center;
+            font-size: 24pt;
         }
         hr {
             border: 2px solid #000; /* 테두리를 두껍게 설정 */
@@ -20,6 +22,10 @@
         }
         button {
             margin-left: 20px; /* 원하는 왼쪽 갭 값으로 설정 */
+        }
+        .max-w-sm {
+            margin-left: 20px; 
+            margin-top: 20px; 
         }
     </style>
 </head>
@@ -29,6 +35,26 @@
     <button class="btn btn-primary">
         <span class="spinner-border spinner-border-sm"></span>
         Still making presents..
-    </button>
+    </button>   
+    
+
+    <div class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg dark:bg-gray-800 dark:border-gray-700">
+        <a href="#">
+            <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Python Web Framework Flask</h5>
+        </a>
+        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
+            <b>2024.03.11</b><br>
+            프레임워크와 라이브러리의 차이를 이해하고 파이썬의 대표적인 웹 프레임워크인 "Flask"를 이용하여 경량 웹서버를 구축하는 방법에 대해 알아봅니다.
+        </p>
+        <a href="./presentations/ppt/[웹프로그래밍응용] Flask-2022564004 김다빈.pptx" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+            Read more
+            <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+            </svg>
+        </a>
+    </div>
+    
+
+</div>
 </body>
 </html>
