--- a/presentation.html
+++ b/presentation.html
@@ -22,13 +22,15 @@
         }
         button {
             margin-left: 20px; /* 원하는 왼쪽 갭 값으로 설정 */
+            margin-bottom: 20px;
         }
         .container {
             display: flex;
         }
         .max-w-sm {
             flex: 1; /* 같은 너비로 콘텐츠를 배치 */
-            margin-right: 20px; /* 간격을 최소화하기 위한 작은 마진 설정 */
+            margin-left: -90px;
+            margin-right: 120px; /* 간격을 최소화하기 위한 작은 마진 설정 */
         }
         .max-w-sm:last-child {
             margin-right: 0; /* 마지막 콘텐츠의 오른쪽 마진을 없애고 붙도록 설정 */
@@ -40,8 +42,8 @@
     <hr>
     <button class="btn btn-primary">
         <span class="spinner-border spinner-border-sm"></span>
-        Still making presents..
-    </button>   
+        Still making presentations..
+    </button>
     
     <div class="container">
         <!--0311 발표-->
@@ -68,9 +70,12 @@
             </a>
             <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
                 <b>2024.03.26</b><br>
-                Git, SourceTree를 설치하고 git 명령어를<br>GUI 환경에서 다루는 방법에 대해 알아봅시다.
+                버전 관리 시스템과 Git, Git의 구조,<br>
+                Git의 기본 명령어에 대해 이해하고,<br>
+                SourceTree를 이용하여 GUI 환경에서<br>
+                Git 명령어를 실습합니다. 
             </p>
-            <a href="./presentations/[웹프로그래밍응용] Flask-2022564004 김다빈.pptx" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+            <a href="./presentations/[웹프로그래밍응용] Git-2022564004 김다빈.pptx" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                 Read more
                 <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
@@ -85,10 +90,13 @@
             </a>
             <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
                 <b>2024.04.01</b><br>
-                Javascript의 메모리 모델에 대해 알아봅시다.
+                Javascript의 원시 타입과 참조 타입,<br>
+                Stack과 Heap에 메모리를 할당하는 과정,<br>
+                가비지 컬렉션을 이용하여 할당한 메모리를<br>
+                해제하는 과정에 대해 알아봅니다.
             </p>
             <a href="./presentations/[웹프로그래밍응용] Flask-2022564004 김다빈.pptx" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-                will be uploaded
+                Read more
                 <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
                 </svg>
