--- a/presentation.html
+++ b/presentation.html
@@ -117,9 +117,28 @@
                 <b>2024.04.08</b><br>
                 함수형 프로그래밍의 개념과<br>
                 그 특징 중 하나인 순수 함수, 그리고<br>
-                순수 함수와 비순수 함수를 구분하는<br>사이드 이펙트에 대해 알아봅시다
+                순수 함수와 비순수 함수를 구분하는<br>사이드 이펙트에 대해 알아봅시다.
             </p>
             <a href="./presentations/[웹프로그래밍응용] Flask-2022564004 김다빈.pptx" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                Read more
+                <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                </svg>
+            </a>
+        </div>
+        <!--0415 발표-->
+        <div class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg dark:bg-gray-800 dark:border-gray-700">
+            <a href="#">
+                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">callback function</h5>
+            </a>
+            <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
+                <b>2024.04.15</b><br>
+                콜백 함수와 콜백 지옥이 무엇인지,<br>
+                그리고 콜백 지옥을 해결하기 위해<br>
+                쓰이는 Promise객체와 async/await의<br>
+                사용 방법에 대해 알아봅시다.
+            </p>
+            <a href="./presentations/[웹프로그래밍응용] 콜백 함수-2022564004 김다빈.pptx" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                 Read more
                 <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
