--- a/tasks.html
+++ b/tasks.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Tasks</title>
     <style>
@@ -13,6 +14,7 @@
         h1 {
             font-weight: bold;
             text-align: center;
+            font-size: 24pt;
         }
         hr {
             border: 2px solid #000; /* 테두리를 두껍게 설정 */
@@ -20,6 +22,22 @@
         }
         button {
             margin-left: 20px; /* 원하는 왼쪽 갭 값으로 설정 */
+            margin-bottom: 20px;
+        }
+        .container {
+            display: flex;
+            margin-left: 10px;
+        }
+        .max-w-sm {
+            flex: 1; /* 같은 너비로 콘텐츠를 배치 */
+            margin-right: 50px; /* 간격을 최소화하기 위한 작은 마진 설정 */
+            margin-bottom: 30px;
+        }
+        .max-w-sm:not(:first-child) {
+            margin-left: 20px; /* 첫 번째 콘텐츠를 제외한 나머지 콘텐츠에 왼쪽 마진 설정 */
+        }
+        .max-w-sm:last-child {
+            margin-right: 0; /* 마지막 콘텐츠의 오른쪽 마진을 없애고 붙도록 설정 */
         }
     </style>
 </head>
@@ -28,7 +46,129 @@
     <hr>
     <button class="btn btn-primary">
         <span class="spinner-border spinner-border-sm"></span>
-        Still doing tasks..
+        Still doing tasks...
     </button>
+    
+    <div class="container">
+        <!--0318-->
+        <div class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg dark:bg-gray-800 dark:border-gray-700">
+            <a href="#">
+                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">React Intro</h5>
+            </a>
+            <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
+                <b>2024.03.18</b><br>
+                React의 기초적인 개념, 특히 렌더링 과정에<br>
+                중점을 두어 이론적인 부분을 이해하고,<br>
+                create-react-app으로 첫 React 프로젝트<br>
+                폴더를 생성해 빌드 파일을 만들어본다.
+            </p>
+            <a href="https://github.com/tealight03/2024React/tree/main/0318" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                Read more
+                <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                </svg>
+            </a>
+        </div>
+
+        <!--0325-->
+        <div class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg dark:bg-gray-800 dark:border-gray-700">
+            <a href="#">
+                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">React Element</h5>
+            </a>
+            <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
+                <b>2024.03.25</b><br>
+                React를 구성하는 Elements에 대해 이해하고,<br>
+                JSX 문법을 이용하여 React Elements를 다루는<br>
+                연습을 한다. 또한, 지난주 배웠던 SPA 개념을<br>
+                적용한 웹사이트 시안을 제작한다.<br>
+            </p>
+            <a href="https://github.com/tealight03/2024React/tree/main/0325" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                Read more
+                <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                </svg>
+            </a>
+        </div>
+
+        <!--0401-->
+        <div class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg dark:bg-gray-800 dark:border-gray-700">
+            <a href="#">
+                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">React Component</h5>
+            </a>
+            <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
+                <b>2024.04.01</b><br>
+                React를 구성하는 Component의 개념에<br>
+                대해 이해하고, 그 특징과 사용 방법에 대해<br>
+                이해한다. 그리고 Component들로 구성된<br>
+                하나의 웹페이지를 만들어본다.
+            </p>
+            <a href="https://github.com/tealight03/2024React/tree/main/0401" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                Read more
+                <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                </svg>
+            </a>
+        </div>
+    </div>
+    <div class="container">
+        <!--0408-->
+        <div class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg dark:bg-gray-800 dark:border-gray-700">
+            <a href="#">
+                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">React useState</h5>
+            </a>
+            <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
+                <b>2024.04.08</b><br>
+                React의 state에 대해 이해하고, 이전에 배웠던<br>
+                props와 어떠한 차이점이 있는지 알아본다.<br>
+                또한 state를 다루기 위해 useState를 이용하는<br>
+                예제를 몇 가지 다루어본다.
+            </p>
+            <a href="https://github.com/tealight03/2024React/tree/main/0408" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                Read more
+                <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                </svg>
+            </a>
+        </div>
+        <!--0415-->
+        <div class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg dark:bg-gray-800 dark:border-gray-700">
+            <a href="#">
+                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">React Hook(1)</h5>
+            </a>
+            <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
+                <b>2024.04.15</b><br>
+                React Hook의 등장 배경과 Hook이 무엇인지,<br>
+                Hook의 종류, 그리고 이를 사용하기 위한<br>
+                규칙에 대해 알아보고, Hook 중 useState를<br>
+                이용하는 예제를 다뤄본다.
+            </p>
+            <a href="https://github.com/tealight03/2024React/tree/main/0415" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                Read more
+                <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                </svg>
+            </a>
+        </div>
+        <!--0429-->
+        <div class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg dark:bg-gray-800 dark:border-gray-700">
+            <a href="#">
+                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">React Hook(2)</h5>
+            </a>
+            <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
+                <b>2024.04.29</b><br>
+                이전 주에 이어서 useReducer, useContext,<br>
+                useRef, useImperativeHandle, useEffect,<br>
+                useLayoutEffect, useInsertionEffect 등<br>
+                다양한 React Hook을 다루어본다.
+            </p>
+            <a href="https://github.com/tealight03/2024React/tree/main/0429" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                Read more
+                <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                </svg>
+            </a>
+        </div>
+    </div>
+</div>
 </body>
 </html>
